# Anima

./: .dockerignore  .env.benchmark.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  hf-space-deploy.yml  train-zoo.yml
alignment/: __init__.py  confound_control.py  encoding_pipeline.py  litcoder_pipeline.py  narratives_loader.py  target_builders.py  tribe_encoder.py  tribe_runtime.py  word_token_align.py
api/: __init__.py  schemas.py  server.py
benchmarks/: __init__.py  council.py  export_meta_manifest.py  guard_metrics.py  live_guard_eval.py  manifest.py  run_all.py  run_brainscore.py  run_go_emotions.py  run_guard_ablation.py  run_halueval_guard.py  run_litcoder_compare.py  run_narratives_dev.py  run_narratives_encoding.py  run_smoke.py  run_tribe_reference.py  run_truthfulqa_guard.py
benchmarks/fixtures/: halueval_guard_sample.json  poc_emotional_prompts.json  truthfulqa_guard_sample.json
benchmarks/reports/: all_models_rollup.json  council_HuggingFaceTB_SmolLM2-1.7B-Instruct.json  council_Qwen_Qwen2.5-0.5B-Instruct.json  council_TinyLlama_TinyLlama-1.1B-Chat-v1.0.json  council_distilgpt2.json  council_google_gemma-2-2b-it.json  council_hf-internal-testing_tiny-random-gpt2.json  council_rollup.json  (+15 more)
cli/: run.py
core/: __init__.py  defaults.py  extractor.py  guard.py  hooks.py  intervention.py  layer_config.py  limits.py  prompt_format.py  regions.py  stability.py  suppression.py
dashboard/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
data/: README.md
docs/: ANIMA_TECHNICAL_OVERVIEW.md  BENCHMARKS.md  BENCHMARK_PUBLISHING.md  BENCHMARK_REPORT.md  BRAIN_PROBE_DATA.md  BUILD_PLAN.md  GETTING_STARTED.md  LLM-Affect-v2-Deep-Dive.docx  MODELS_AND_ZOO.md  PROJECT_OVERVIEW.md  README.md  RESEARCHER_QUICKSTART.md  RESEARCH_GRADE.md  RUN_AND_TEST_COMMANDS.txt  TRAINING.md  TRAIN_ON_YOUR_MACHINE.md  USAGE_AND_LIMITATIONS.md  V2_RELEASE.md  _generate_llm_affect_deep_dive.py
probes/: __init__.py  calibration.py  emotion_va_map.py  guard_config.yaml  linear_probe.py  steering_optional.py  train.py  train_text.py  validate.py  zoo_io.py
scripts/: benchmark_publish_review.py  bootstrap.py  build_synthetic_brain_dataset.py  build_zoo_tiny_probe.py  bundle_zoo_release.py  deploy_hf_space.py  docker-build.ps1  docker-down.ps1  docker-down.sh  docker-up.ps1  docker-up.sh  download_narratives.md  download_narratives.py  download_narratives_minimal.py  download_zoo.py  expand_guard_fixtures.py  generate_benchmark_charts.py  generate_benchmark_report.py  git_dated_commits.ps1  gradio_demo.py  ollama_to_hf.json  pull_hf_models.py  run_all_models_benchmark.py  run_dash_demo.py  run_full_setup.ps1  run_poc_demo.py  run_prompt_separation.py  setup_benchmarks.ps1  setup_benchmarks.py  space_repo_commits.py  spread_github_heatmap.py  start_anima.ps1  stress_v1.ps1  train_all_probes.py  train_text_lite.py  train_text_zoo_all.py  train_zoo_full.py  validate_narratives_root.py
space/: Dockerfile  README.md  app.py  entrypoint.sh  requirements.txt
tests/: test_alignment.py  test_api.py  test_api_limits.py  test_council.py  test_encode.py  test_guard.py  test_health.py  test_hooks.py  test_intervention.py  test_limits.py  test_manifest.py  test_manifest_paths.py  test_models_api.py  test_narratives_split.py  test_probes.py  test_quantized_load.py  test_roadmap_26.py  test_stability.py  test_suppression.py  test_tribe_encoder.py  test_uncertainty_signals.py  test_ws_plumbing.py
(+50 files in other folders)
