[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima"
version = "2.0.0"
description = "Anima (beta): dimensional LLM readouts via FastAPI and optional Vite dashboard — research tooling, not a clinical feelings detector."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "anima contributors" }]
keywords = [
    "llm",
    "interpretability",
    "probing",
    "fastapi",
    "transformers",
    "affect",
    "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "nibabel>=5.2.0",
]

[project.optional-dependencies]
sae = ["sae-lens>=3.0.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["core", "alignment", "probes", "api", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
